--- a/css/custom.css
+++ b/css/custom.css
@@ -65,7 +65,7 @@ div.container {
 }
 
 div.row {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.7);
     border-radius: 1rem;
     margin-bottom: 2rem;
     width: 96%;
@@ -83,6 +83,9 @@ div.centerize {
 div.extend-width {
     width: 96%;
     padding: 2%;
+    text-align: justify;
+    -ms-text-justify: distribute-all-lines;
+    text-justify: distribute-all-lines;
 }
 
 @media (min-width: 550px) {
@@ -91,6 +94,64 @@ div.extend-width {
         padding: 2%;
         margin-left: -10%;
     }
+}
+
+.stretch {
+  width: 100%;
+  display: inline-block;
+  font-size: 0;
+  line-height: 0
+}
+
+
+#spancontainer {
+  text-align: justify;
+  -ms-text-justify: distribute-all-lines;
+  text-justify: distribute-all-lines;
+}
+
+.organizer-box {
+  width: 100%;
+  /*height: 100%;*/
+  vertical-align: top;
+  display: inline-block;
+  *display: inline;
+  zoom: 1
+}
+
+.speaker-box-text {
+  width: 100%;
+  /*height: 100%;*/
+  vertical-align: top;
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+div.speaker-box-text p.title {
+    font-weight: 900;
+    font-size: 2.0rem;
+    line-height: 4rem;
+    text-align: left;
+}
+
+@media (min-width: 550px){
+    div.organizer-box {
+        width: 27%;
+    }
+    div.speaker-box-text {
+        width: 65%;
+    }
+}
+
+.stretch {
+  width: 100%;
+  display: inline-block;
+  font-size: 0;
+  line-height: 0
 }
 
 div.organizer-tile {
@@ -113,6 +174,7 @@ div.organizer-tile p.organizer-name {
 
 div.organizer-tile p {
     text-align: center;
+    font-size: 2.0rem;
     padding: 0;
     margin: 0;
 }
