--- a/css/custom.css
+++ b/css/custom.css
@@ -58,6 +58,38 @@ p {
     margin-bottom: 2.0rem;
 }
 
+h2.rowheader {
+    font-size: 3.5rem;
+}
+
+tr {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    margin-bottom: 2.0rem;
+}
+
+tr.header {
+    padding-left: 0;
+    font-size: 2.2rem;
+}
+
+tr.nextevent {
+    font-weight: bold;
+}
+
+td.speaker {
+    font-weight: bold;
+}
+
+td.title {
+    font-weight: bold;
+}
+
+p.table {
+   line-height: 2rem;
+   padding-top: 10px;
+}
+
 
 /* blocks */
 div.container {
@@ -126,7 +158,7 @@ div.extend-width {
 div.speaker-box-text p.title {
     font-weight: 900;
     font-size: 2.0rem;
-    line-height: 4rem;
+    line-height: 2.5rem;
     text-align: left;
 }
 
